--- a/02-Homework-JAD/02-Homework/index.html
+++ b/02-Homework-JAD/02-Homework/index.html
@@ -26,9 +26,11 @@
         </div>
     </nav>
 
-    <section>
-        <!-- Main content of the page -->
+    <!-- Background Image -->
     <div class="hero"></div>
+
+    <!-- Main content of the page -->
+    <section> 
         <div class="content">
         <div id="search-engine-optimization" class="content-style">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook on desk with SEO refrences" class="float-left" />
@@ -54,27 +56,27 @@
         </div>
             <!-- Side content with benefits information -->
             <aside class="benefits">
-            <div class="benefit-style">
-                <h3>Lead Generation</h3>
-                    <img src="./assets/images/lead-generation.png" />
-                        <p>
-                            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-                        </p>
-            </div>
-            <div class="benefit-style">
-                <h3>Brand Awareness</h3>
-                    <img src="./assets/images/brand-awareness.png" />
-                        <p>
-                            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                        </p>
-            </div>
-            <div class="benefit-style">
-                <h3>Cost Management</h3>
-                    <img src="./assets/images/cost-management.png"></img>
-                        <p>
-                            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-                        </p>
-            </div>
+                <div class="benefit-style">
+                    <h3>Lead Generation</h3>
+                        <img src="./assets/images/lead-generation.png" />
+                            <p>
+                                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                            </p>
+                </div>
+                <div class="benefit-style">
+                    <h3>Brand Awareness</h3>
+                        <img src="./assets/images/brand-awareness.png" />
+                            <p>
+                                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                            </p>
+                </div>
+                <div class="benefit-style">
+                    <h3>Cost Management</h3>
+                        <img src="./assets/images/cost-management.png"></img>
+                            <p>
+                                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                            </p>
+                </div>
             </aside>
     </section>
         <!-- Footer with copyright-->
